--- a/src/main/resources/static/css/resource.css
+++ b/src/main/resources/static/css/resource.css
@@ -50,4 +50,10 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   }
+
+  .resource-type {
+    font-size: x-small;
+    color: grey;
+    font-style: italic;
+  }
   
